doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\Greenfoot\lib\greenfoot.jar;C:\Program Files\Greenfoot\lib\bluejcore.jar;C:\Program Files\Greenfoot\lib\bluejeditor.jar;C:\Program Files\Greenfoot\lib\bluejext2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-console-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-console-standalone-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-reporting-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-runner-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-testkit-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-quickcheck-core-0.9.jar;C:\Program Files\Greenfoot\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\Greenfoot\lib\hamcrest-core-1.3.jar;C:\Program Files\Greenfoot\lib\bluej.jar;C:\Program Files\Greenfoot\lib\classgraph-4.8.90.jar;C:\Program Files\Greenfoot\lib\diffutils-1.2.1.jar;C:\Program Files\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files\Greenfoot\lib\jl1.0.1.jar;C:\Program Files\Greenfoot\lib\opencsv-2.3.jar;C:\Program Files\Greenfoot\lib\xom-1.2.9.jar;C:\Program Files\Greenfoot\lib\lang-stride.jar;C:\Program Files\Greenfoot\lib\nsmenufx-2.1.8.jar;C:\Program Files\Greenfoot\lib\richtextfx-fat-0.9.0.jar;C:\Program Files\Greenfoot\lib\guava-17.0.jar;C:\Program Files\Greenfoot\lib\httpclient-4.1.1.jar;C:\Program Files\Greenfoot\lib\httpcore-4.1.jar;C:\Program Files\Greenfoot\lib\httpmime-4.1.1.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.base.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.controls.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.media.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.properties.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.swing.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.web.jar;C:\Users\Fredd\Documents\UVG_A1_S2\POO\Void
-d
C:\Users\Fredd\Documents\UVG_A1_S2\POO\Void\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\Fredd\Documents\UVG_A1_S2\POO\Void\Player.java
<---- end of javadoc command ---->
Loading source file C:\Users\Fredd\Documents\UVG_A1_S2\POO\Void\Player.java...
C:\Users\Fredd\Documents\UVG_A1_S2\POO\Void\Player.java:21: error: illegal start of type
        if(Greenfoot.isKeyDown("down")){
        ^
C:\Users\Fredd\Documents\UVG_A1_S2\POO\Void\Player.java:21: error: <identifier> expected
        if(Greenfoot.isKeyDown("down")){
                              ^
C:\Users\Fredd\Documents\UVG_A1_S2\POO\Void\Player.java:21: error: illegal start of type
        if(Greenfoot.isKeyDown("down")){
                               ^
C:\Users\Fredd\Documents\UVG_A1_S2\POO\Void\Player.java:24: error: illegal start of type
        if(Greenfoot.isKeyDown("up")){
        ^
C:\Users\Fredd\Documents\UVG_A1_S2\POO\Void\Player.java:24: error: <identifier> expected
        if(Greenfoot.isKeyDown("up")){
                              ^
C:\Users\Fredd\Documents\UVG_A1_S2\POO\Void\Player.java:24: error: illegal start of type
        if(Greenfoot.isKeyDown("up")){
                               ^
C:\Users\Fredd\Documents\UVG_A1_S2\POO\Void\Player.java:27: error: illegal start of type
        if(Greenfoot.isKeyDown("right")){
        ^
C:\Users\Fredd\Documents\UVG_A1_S2\POO\Void\Player.java:27: error: <identifier> expected
        if(Greenfoot.isKeyDown("right")){
                              ^
C:\Users\Fredd\Documents\UVG_A1_S2\POO\Void\Player.java:27: error: illegal start of type
        if(Greenfoot.isKeyDown("right")){
                               ^
C:\Users\Fredd\Documents\UVG_A1_S2\POO\Void\Player.java:30: error: illegal start of type
        if(Greenfoot.isKeyDown("left")){
        ^
C:\Users\Fredd\Documents\UVG_A1_S2\POO\Void\Player.java:30: error: <identifier> expected
        if(Greenfoot.isKeyDown("left")){
                              ^
C:\Users\Fredd\Documents\UVG_A1_S2\POO\Void\Player.java:30: error: illegal start of type
        if(Greenfoot.isKeyDown("left")){
                               ^
C:\Users\Fredd\Documents\UVG_A1_S2\POO\Void\Player.java:33: error: illegal start of type
        if(isAtEdge()== true){
        ^
C:\Users\Fredd\Documents\UVG_A1_S2\POO\Void\Player.java:33: error: invalid method declaration; return type required
        if(isAtEdge()== true){
           ^
C:\Users\Fredd\Documents\UVG_A1_S2\POO\Void\Player.java:33: error: ';' expected
        if(isAtEdge()== true){
                     ^
C:\Users\Fredd\Documents\UVG_A1_S2\POO\Void\Player.java:35: error: ';' expected
        }your action code here.
                    ^
C:\Users\Fredd\Documents\UVG_A1_S2\POO\Void\Player.java:35: error: ';' expected
        }your action code here.
                              ^
C:\Users\Fredd\Documents\UVG_A1_S2\POO\Void\Player.java:37: error: class, interface, or enum expected
}
^
18 errors
